
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int LPCSTR ;
typedef int DWORD ;
typedef scalar_t__ BOOL ;


 int GetLastError () ;
 int MOVEFILE_REPLACE_EXISTING ;
 scalar_t__ MoveFileEx (int ,int ,int ) ;
 int printf (char*,...) ;
 int system (char*) ;

DWORD trigger_callback() {

 printf("[+] Creating dummy file\n");
 system("echo test > test.txt");

 printf("[+] Calling MoveFileEx()\n");
 BOOL MFEresult;
 MFEresult = MoveFileEx((LPCSTR)"test.txt", (LPCSTR)"test2.txt", MOVEFILE_REPLACE_EXISTING);
 if (MFEresult == 0)
 {
  printf("[!] Error while calling MoveFileEx(): %d\n", GetLastError());
  return 1;
 }
 return 0;
}
